Changes for Measure::Everything::Adapter::InfluxDB::Direct

1.000	2016-06-01T15:00:00
	- first release to CPAN

