@@ -1,2 +1,3 @@
 Measure-Everything-Adapter-InfluxDB-Direct-*
 .build
+local
