@@ -1,0 +1,27 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
+requires "Hijk" => "0";
+requires "InfluxDB::LineProtocol" => "0";
+requires "Log::Any" => "0";
+requires "MIME::Base64" => "0";
+requires "Measure::Everything::Adapter::Base" => "0";
+requires "Try::Tiny" => "0";
+requires "base" => "0";
+
+on 'build' => sub {
+  requires "Module::Build" => "0.28";
+};
+
+on 'test' => sub {
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
+  requires "Test::More" => "0";
+  requires "perl" => "5.006";
+};
+
+on 'configure' => sub {
+  requires "Module::Build" => "0.28";
+};
