@@ -1,40 +1,7 @@
 name    = Measure-Everything-Adapter-InfluxDB-Direct
-author  = Thomas Klausner <domm@cpan.org>
+author  = Thomas Klausner <domm@plix.at>
 license = Perl_5
 copyright_holder = Thomas Klausner
-copyright_year   = 2016
+copyright_year   = 2016 - 2021
 
-[GatherDir]
-include_dotfiles = 1
-exclude_match = local
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[Readme]
-[ExecDir]
-[ShareDir]
-[Repository]
-git_remote = github
-
-[MetaResources]
-
-[CheckChangeLog]
-
-[Manifest]
-
-[TestRelease]
-[ConfirmRelease]
-
-[AutoPrereqs]
-skip = ^testlib
-
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-
-[InstallGuide]
-[MetaJSON]
-
-[@Git]
-
+[@Author::DOMM]
