@@ -1,5 +1,9 @@
 Changes for Measure::Everything::Adapter::InfluxDB::Direct
 
+{{$NEXT}}
+    - dist housekeeping, Dist::Zilla::PluginBundle::Author::DOMM
+
+
 1.000	2016-06-01T15:00:00
 	- first release to CPAN
 
